--- a/docs/templates/category.md.j2
+++ b/docs/templates/category.md.j2
@@ -24,8 +24,8 @@
 **Arguments**
 
 {% for param in command.params if param.is_argument %}
-&nbsp;&nbsp;&nbsp;&nbsp;**`{{ param.human_readable_name }}`**
-<br />&nbsp;&nbsp;&nbsp;&nbsp;{{ param.help_plain}}
+**`{{ param.human_readable_name }}`**
+<br />{{ param.help_plain}}
 
 {% endfor %}
 
@@ -39,25 +39,40 @@
 
 **Options**
 
-
+{# Opts. Example (--wizard/--no-wizard) #}
 {% for param in command.params if not param.is_argument %}
-{% if param.opts | length > 0 %}
-&nbsp;&nbsp;&nbsp;&nbsp;{% for param in param.opts %} `{{ param }}`{% if not loop.last %}, {% endif %}{% endfor %} {% if not param.is_flag %}`<{{ param.human_readable_name }}>`{% endif %}<br />
+{% if param.opts | length > 0 -%}
+{% for param in param.opts %} `{{ param }}`{% if not loop.last %}, {% endif %}{% endfor -%}
 {% endif -%}
-&nbsp;&nbsp;&nbsp;&nbsp;{{ param.help_plain }}
-{%- if param.name == "query" -%}
- See [harborapi docs](https://pederhan.github.io/harborapi/usage/methods/read/#query) for more information.
+{% if param.secondary_opts | length > 0 -%}
+/{% for param in param.secondary_opts -%} `{{ param }}`{% if not loop.last %}, {% endif %}{% endfor -%}
+{% endif -%}
+{%- if not param.is_flag %}
+    `<{{ param.human_readable_name }}>`
+{% endif -%}<br />
+{%- if param.help_plain -%}
+{{ param.help_plain }}<br />
 {%- endif -%}
-<br />
-&nbsp;&nbsp;&nbsp;&nbsp;**Type:** `{{ param.type}}` {% if param.is_flag %}(flag){% endif %}<br />
-
+{%- if param.name == "query" -%}
+ See [harborapi docs](https://pederhan.github.io/harborapi/usage/methods/read/#query) for more information.<br />
+{%- endif -%}
+**Type:** `{{ param.type}}` {% if param.is_flag %}(flag){% endif %}<br />
 {%- if param.type == "choice" -%}
-&nbsp;&nbsp;&nbsp;&nbsp;**Choices:** {% for element in param.choices -%}{{ "`" + element + "`" if loop.first else ", `" + element + "`" }}{% endfor %}<br />
-{% endif %}
+**Choices:** {% for element in param.choices -%}{{ "`" + element + "`" if loop.first else ", `" + element + "`" }}{% endfor %}<br />
+{% endif -%}
 
 {%- if param.default is not none -%}
-&nbsp;&nbsp;&nbsp;&nbsp;**Default:** `{{ param.default }}`<br />
-{%- endif %}
+**Default:** `{{ param.default }}`<br />
+{%- endif -%}
+
+{%- if param.multiple -%}
+**Multiple:** `True`<br />
+{%- endif -%}
+
+{%- if param.required -%}
+**Required:** `True`<br />
+{%- endif -%}
+
 
 
 
