--- a/docs/templates/category.md.j2
+++ b/docs/templates/category.md.j2
@@ -1,4 +1,56 @@
 {# Takes in a category and a list of CommandSummary objects #}
+
+{% macro render_param(param) -%}
+{% if param.is_argument -%}
+**`{{ param.human_readable_name }}`**
+{% else %}
+{% if param.opts | length > 0 -%}
+{% for param in param.opts %} **`{{ param }}`**{% if not loop.last %}, {% endif %}{% endfor -%}
+{% endif -%}
+{% if param.secondary_opts | length > 0 -%}
+/{% for param in param.secondary_opts -%} **`{{ param }}`**{% if not loop.last %}, {% endif %}{% endfor -%}
+{% endif -%}
+{%- if not param.is_flag %}
+    `<{{ param.human_readable_name }}>`
+{% endif -%}
+{% endif %}<br />
+
+{%- if param.help_plain -%}
+{{ param.help_plain }}<br />
+{%- endif -%}
+
+{# bandaid to patch in harborapi query usage #}
+{%- if not param.is_argument and param.name == "query" -%}
+See [harborapi docs](https://pederhan.github.io/harborapi/usage/methods/read/#query) for more information.<br />
+{%- endif -%}
+
+**Type:** `{{ param.type}}` {% if param.is_flag %}(flag){% endif %}<br />
+
+{%- if param.type == "choice" -%}
+**Choices:** {% for element in param.choices -%}{{ "`" + element + "`" if loop.first else ", `" + element + "`" }}{% endfor %}<br />
+{%- endif -%}
+
+{%- if param.min is not none -%}
+**Min:** `{{ param.min }}`<br />
+{%- endif -%}
+
+{%- if param.max is not none -%}
+**Max:** `{{ param.max }}`<br />
+{%- endif -%}
+
+{%- if param.default is not none -%}
+**Default:** `{{ param.default }}`<br />
+{%- endif -%}
+
+{%- if param.multiple -%}
+**Multiple:** `True`<br />
+{%- endif -%}
+
+{%- if param.required -%}
+**Required:** ✅<br />
+{%- endif -%}
+{%- endmacro %}
+
 {% if category | length > 0 %}
 # {{ category }}
 
@@ -24,9 +76,8 @@
 **Arguments**
 
 {% for param in command.params if param.is_argument %}
-**`{{ param.human_readable_name }}`**
-<br />{{ param.help_plain}}
-
+{{ render_param(param) }}
+{# End param loop #}
 {% endfor %}
 
 {# End argument listing #}
@@ -35,49 +86,14 @@
 {# Only show this section if we have options #}
 {% set option_params = command.params | selectattr('is_argument', 'equalto', false) | list %}
 
+{# Start params listing #}
 {% if option_params | length > 0 %}
 
 **Options**
 
 {# Opts. Example (--wizard/--no-wizard) #}
 {% for param in command.params if not param.is_argument %}
-{% if param.opts | length > 0 -%}
-{% for param in param.opts %} `{{ param }}`{% if not loop.last %}, {% endif %}{% endfor -%}
-{% endif -%}
-{% if param.secondary_opts | length > 0 -%}
-/{% for param in param.secondary_opts -%} `{{ param }}`{% if not loop.last %}, {% endif %}{% endfor -%}
-{% endif -%}
-{%- if not param.is_flag %}
-    `<{{ param.human_readable_name }}>`
-{% endif -%}<br />
-{%- if param.help_plain -%}
-{{ param.help_plain }}<br />
-{%- endif -%}
-{%- if param.name == "query" -%}
- See [harborapi docs](https://pederhan.github.io/harborapi/usage/methods/read/#query) for more information.<br />
-{%- endif -%}
-**Type:** `{{ param.type}}` {% if param.is_flag %}(flag){% endif %}<br />
-{%- if param.type == "choice" -%}
-**Choices:** {% for element in param.choices -%}{{ "`" + element + "`" if loop.first else ", `" + element + "`" }}{% endfor %}<br />
-{% endif -%}
-
-{%- if param.default is not none -%}
-**Default:** `{{ param.default }}`<br />
-{%- endif -%}
-
-{%- if param.multiple -%}
-**Multiple:** `True`<br />
-{%- endif -%}
-
-{%- if param.required -%}
-**Required:** `True`<br />
-{%- endif -%}
-
-
-
-
-
-
+{{ render_param(param) }}
 {# End param loop #}
 {% endfor %}
 
