--- a/docs/templates/category.md.j2
+++ b/docs/templates/category.md.j2
@@ -63,6 +63,11 @@ See [harborapi docs](https://pederhan.github.io/harborapi/usage/methods/read/#qu
 ## {{ command.name }}
 
 
+{% if command.deprecated -%}
+!!! warning "Deprecated"
+    This command is deprecated and will be unsupported in the future.
+{% endif -%}
+
 ```
 {{ command.usage }}
 ```
