Docs: show addendum in italics

--- a/docs/templates/category.md.j2
+++ b/docs/templates/category.md.j2
@@ -19,7 +19,7 @@
 {{ param.help_plain }}
 {%- endif -%}
 {%- if param.multiple -%}
-&nbsp;Can be specified multiple times.
+&nbsp;*Can be specified multiple times.*
 {%- endif -%}<br />
 
 {#- bandaid to patch in harborapi query usage -#}
