--- a/docs/templates/command_list.md.j2
+++ b/docs/templates/command_list.md.j2
@@ -1,4 +1,25 @@
-# Categories
+# Commands
+
+There are currently {{ commandlist | length }} available commands.
+
+For more information about a specific command, use:
+
+```
+harbor <command> --help
+```
+
+See [Commands](../commands/index.md) for usage info of each command.
+
+
+
+
+## List of commands
+
+```
+{% for command in commandlist -%}
+{{ command }}
+{% endfor %}
+```
 
 {% for category, path in pages.items() -%}
 * [{{ category }}]({{ path }})
