Unioslo find and replace

--- a/docs/templates/category.md.j2
+++ b/docs/templates/category.md.j2
@@ -25,7 +25,7 @@
 
 {#- bandaid to patch in harborapi query usage -#}
 {%- if not param.is_argument and param.name == "query" -%}
-See [harborapi docs](https://pederhan.github.io/harborapi/usage/methods/read/#query) for more information.<br />
+See [harborapi docs](https://unioslo.github.io/harborapi/usage/methods/read/#query) for more information.<br />
 {%- endif -%}
 
 **Type:** `{{ param.type}}` {% if param.is_flag %}(flag){% endif %}<br />
